--- a/engine/html/widgets/ytd.html
+++ b/engine/html/widgets/ytd.html
@@ -52,8 +52,8 @@
         // Stroke
         context.strokeStyle = '{{ widget_font_color_stroke }}';
         context.lineWidth = {{ widget_font_stroke_width }};
-        context.strokeText('yearly {{ text }} goal achieved', centerX, textDescriptionTop);
-        context.fillText('yearly {{ text }} goal achieved', centerX, textDescriptionTop);
+        context.strokeText('yearly {{ activity_type }} goal', centerX, textDescriptionTop);
+        context.fillText('yearly {{ activity_type }} goal', centerX, textDescriptionTop);
 
     });
 
