--- a/engine/html/widgets/widget-ytd-ride-totals-simple.html
+++ b/engine/html/widgets/widget-ytd-ride-totals-simple.html
@@ -1,5 +1,3 @@
-<div id="statsCanvas" width="1000" height="120"
-        style="z-index: 100; position: absolute; left:1350px; top:30px">
 
     <div style="text-align: right;">
         <p>
@@ -56,4 +54,4 @@
         </p>
     </div>
 
-</div>
+    <div class="resize-handle"></div>
