--- a/engine/html/widgets/ytd-simple.html
+++ b/engine/html/widgets/ytd-simple.html
@@ -1,60 +1,112 @@
-<canvas id="gaugeCanvas" width="400" height="400"
-        style="z-index: 100;"></canvas>
-<script>
-    window.addEventListener('load', function () {
 
-        var canvas = document.getElementById('gaugeCanvas');
+
+
+    <div style="
+            position: relative;
+            width: 300px; /* Same as canvas width */
+            height: 200px; /* Same as canvas height */
+            margin: 0 auto; /* Center the container */">
+
+        <canvas id="myCanvas" width="200px" height="200px"></canvas>
+
+        <div style="position: absolute;
+                margin-top: -4%;
+                top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font: bold 30px Open Sans; color: {{ widget_font_color }};
+                            -webkit-text-fill-color: {{ widget_font_color }};
+                            -webkit-text-stroke-width: {{ widget_font_stroke_width }}px;
+                            -webkit-text-stroke-color: {{ widget_font_color_stroke }};
+            line-height: 0.8;">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="80"
+                 viewBox="0 0 256 256" xml:space="preserve">
+<defs>
+</defs>
+                <g style="stroke: black; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
+                   transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)">
+    <path d="M 71.194 32.312 c -2.886 0 -5.612 0.673 -8.058 1.84 l -3.668 -6.37 l 3.351 -5.445 c 0.282 -0.458 0.294 -1.032 0.032 -1.501 c -0.263 -0.469 -0.758 -0.76 -1.295 -0.76 h -8.423 c -0.819 0 -1.484 0.664 -1.484 1.484 s 0.664 1.484 1.484 1.484 h 5.768 l -1.988 3.231 H 32.346 l -0.55 -1.006 h 1.233 c 0.82 0 1.484 -0.664 1.484 -1.484 s -0.664 -1.484 -1.484 -1.484 H 21.825 c -0.82 0 -1.484 0.664 -1.484 1.484 s 0.664 1.484 1.484 1.484 h 6.589 l 1.311 2.398 l -3.357 6.247 c -2.317 -1.022 -4.872 -1.6 -7.562 -1.6 C 8.437 32.312 0 40.749 0 51.119 c 0 10.369 8.437 18.806 18.806 18.806 c 9.869 0 17.97 -7.646 18.731 -17.322 h 5.213 v 2.118 h -2.331 c -0.82 0 -1.484 0.664 -1.484 1.484 s 0.664 1.484 1.484 1.484 h 6.516 c 0.819 0 1.484 -0.664 1.484 -1.484 s -0.664 -1.484 -1.484 -1.484 h -1.218 v -3.204 L 57.74 30.725 l 2.82 4.898 c -4.93 3.394 -8.172 9.071 -8.172 15.495 c 0 10.369 8.437 18.806 18.807 18.806 C 81.563 69.924 90 61.488 90 51.119 C 90 40.749 81.563 32.312 71.194 32.312 z M 31.424 30.773 l 10.309 18.862 h -4.196 c -0.472 -6.001 -3.765 -11.212 -8.559 -14.31 L 31.424 30.773 z M 34.57 49.635 H 21.287 l 6.286 -11.697 C 31.444 40.521 34.114 44.76 34.57 49.635 z M 18.806 66.957 c -8.734 0 -15.839 -7.106 -15.839 -15.839 c 0 -8.734 7.106 -15.839 15.839 -15.839 c 2.183 0 4.264 0.444 6.158 1.246 l -7.465 13.891 c -0.247 0.46 -0.234 1.015 0.033 1.463 c 0.268 0.448 0.751 0.722 1.273 0.722 H 34.57 C 33.819 60.641 27.039 66.957 18.806 66.957 z M 44.27 48.092 L 33.967 29.241 h 21.204 L 44.27 48.092 z M 71.194 66.957 c -8.734 0 -15.84 -7.106 -15.84 -15.839 c 0 -5.326 2.651 -10.037 6.694 -12.909 l 7.86 13.649 c 0.274 0.477 0.774 0.744 1.286 0.744 c 0.251 0 0.506 -0.064 0.739 -0.198 c 0.711 -0.409 0.954 -1.315 0.546 -2.025 l -7.861 -13.652 c 2.006 -0.92 4.228 -1.447 6.576 -1.447 c 8.733 0 15.839 7.106 15.839 15.839 C 87.033 59.852 79.927 66.957 71.194 66.957 z"
+          style="stroke: black; stroke-width: 1; fill: white;" transform="matrix(1 0 0 1 0 0)"/>
+</g>
+</svg>
+            <span style="margin-top: -7%;">
+            {{ achieved }}%
+                </span>
+        </div>
+    </div>
+    <div style="            font: bold 30px Open Sans; color: {{ widget_font_color }};
+                            -webkit-text-fill-color: {{ widget_font_color }};
+                            -webkit-text-stroke-width: {{ widget_font_stroke_width }}px;
+                            -webkit-text-stroke-color: {{ widget_font_color_stroke }};">
+    yearly goal achieved
+</div>
+
+
+    <script>
+
+      function degreesToRadians(deg) {
+        return (deg/180) * Math.PI;
+      }
+
+      function percentToRadians(percentage) {
+        // convert the percentage into degrees
+        var degrees = percentage * 360 / 100;
+        // and so that arc begins at top of circle (not 90 degrees) we add 270 degrees
+        return degreesToRadians(degrees + 270);
+      }
+
+      function drawPercentageCircle(percentage, radius, canvas) {
         var context = canvas.getContext('2d');
 
-        context.imageSmoothingEnabled = true;
+        var x = canvas.width / 2;
+        var y = canvas.height / 2;
+        var startAngle = percentToRadians(0);
+        var endAngle = percentToRadians(percentage);
+        // set to true so that we draw the missing percentage
+        var counterClockwise = true;
 
-        var centerX = canvas.width / 2;
-        var centerY = canvas.height / 2;
-        var radius = 150;
-
-        // Draw the gauge background
         context.beginPath();
-        context.arc(centerX, centerY, radius, Math.PI, 2 * Math.PI);
-        context.lineWidth = 40;
-        context.strokeStyle = '#ddd';
+        context.arc(x, y, radius, startAngle, endAngle, counterClockwise);
+        context.lineWidth = 15;
         context.globalAlpha = 0.5;
-        context.stroke();
-        context.globalAlpha = 1.0;
 
-        // Draw the gauge foreground
-        var currentValue = {{ achieved }}; // Change this value to update the gauge
-        var endAngle = Math.PI + (currentValue / 100) * Math.PI;
+        // line color
+        context.strokeStyle = 'black';
+        context.stroke();
+
+        // set to false so that we draw the actual percentage
+        counterClockwise = false;
+
         context.beginPath();
-        context.arc(centerX, centerY, radius, Math.PI, endAngle);
-        context.lineWidth = 40;
-        context.strokeStyle = '{{ widget_font_color }}';
+        context.arc(x, y, radius, startAngle, endAngle, counterClockwise);
+        context.lineWidth = 20;
+        context.globalAlpha = 1;
+
+
+        // line color
+        context.strokeStyle = 'white';
         context.stroke();
+      }
 
-        // Draw the center text
-        var textValueTop = canvas.height * 0.365;
-        context.fillStyle = '{{ widget_font_color }}';
-        context.font = '53px Open Sans';
-        context.textAlign = 'center';
-        context.textBaseline = 'middle';
-        // Stroke
-        context.strokeStyle = '{{ widget_font_color_stroke }}';
-        context.lineWidth = {{ widget_font_stroke_width }};
-        context.strokeText(currentValue + '%', centerX, textValueTop);
-        context.fillText(currentValue + '%', centerX, textValueTop);
+     // implantation happens here
 
+        var canvas = document.getElementById('myCanvas');
+        var percentage = {{ achieved }};
+        var radius;
+        if (myCanvas.height < myCanvas.width) {
+            radius = myCanvas.height / 2.5;
+        }
+        else {
+            radius = myCanvas.width / 2.5;
+        }
+      drawPercentageCircle(percentage, radius, canvas);
 
-        // Draw the center text
-        var textDescriptionTop = canvas.height * 0.48;
-        context.fillStyle = '{{ widget_font_color }}';
-        context.font = '25px Open Sans';
-        context.textAlign = 'center';
-        context.textBaseline = 'middle';
-        // Stroke
-        context.strokeStyle = '{{ widget_font_color_stroke }}';
-        context.lineWidth = {{ widget_font_stroke_width }};
-        context.strokeText('yearly {{ activity_type }} goal', centerX, textDescriptionTop);
-        context.fillText('yearly {{ activity_type }} goal', centerX, textDescriptionTop);
-
-    });
-
-</script>
+    </script>
+  </body>
+</html>
