widgets in DB, read done, write tbd

--- a/engine/html/page.html
+++ b/engine/html/page.html
@@ -310,6 +310,8 @@
 <script>
     $(document).ready(function() {
 
+        var widgets_json = {{ widgets_json }}
+
         function sendPlacementToServer() {
             var position = {
                 left: $(this).css('left'),
